# Embedded_ROS

src/draw_with_motors/: package.xml  setup.cfg  setup.py
src/draw_with_motors/draw_with_motors/: draw_with_motors.py
src/example_package/: CMakeLists.txt
src/example_package/include/: bram_uio.h
src/example_package/src/: bram_node.cpp  image_downscaler.cpp  image_subscriber.cpp  keyboard_node.cpp
src/launch/: robot_launch.py
